# PybindTutorial

./: .gitignore  .gitmodules  README.md
ArmaToNumpy/: armanumpy.md  graph_match.py
ArmaToNumpy/code/: CMakeLists.txt
ArmaToNumpy/code/src/: bruteforce.cpp  bruteforce.hpp  plugin.cpp  pyarma.cpp  pyarma.hpp
FunctionBinding/: funcbind.md
FunctionBinding/code/: CMakeLists.txt
FunctionBinding/code/src/: example.cpp
ObjectBinding/: objbind.md
ObjectBinding/code/src/: example.cpp
